# VLARLKit

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
env_clients/: client.py  utils.py
env_clients/libero/: libero_env.py  utils.py  venv.py
env_clients/maniskill/: maniskill_env.py  utils.py
env_clients/maniskill/tasks/: panda_put_on_in_scene_multi.py
examples/: run.py  run_offpolicy_rl.sh  run_onpolicy_rl.py  run_onpolicy_rl.sh  train_offpolicy_rl.py  train_onpolicy_rl.py
examples/configs/: libero_10_dsrl_pi05.yaml  libero_10_ppo_pi05.yaml  libero_10_rlt_pi05.yaml  libero_goal_ppo_pi05.yaml  libero_object_ppo_pi05.yaml  libero_spatial_dsrl_pi05.yaml  libero_spatial_ppo_pi05.yaml  libero_spatial_rlt_pi05.yaml  maniskill_dsrl_pi05.yaml  maniskill_ppo_pi05.yaml  maniskill_rlt_pi05.yaml
examples/configs/envs/: libero_10.yaml  libero_goal.yaml  libero_object.yaml  libero_spatial.yaml  maniskill_put_on_plate_in_scene_25_main.yaml
examples/configs/models/: pi05.yaml  pi05_for_dsrl.yaml  pi05_for_rl.yaml  pi05_for_rlt.yaml
tests/: test_libero_env.py  test_maniskill_env.py  test_model.py  test_pi05.py  test_rollout.py  test_rollout.sh
vlarlkit/data/: io_struct.py  replay_buffer.py
vlarlkit/models/: base.py
vlarlkit/policies/: __init__.py  dsrl.py  offpolicy_base.py  ppo.py  rlt.py
vlarlkit/rollouts/: __init__.py  rollout.py
vlarlkit/runners/: __init__.py  offpolicy_runner.py  onpolicy_runner.py  runner.py
vlarlkit/utils/: action_utils.py  checkpoint.py  conversion_utils.py  data_sharding.py  fsdp_utils.py  remote_env.py
(+29 files in other folders)
