[project]
name = "vlarlkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "libero",
    "openpi",
    "tensorflow>=2.15.0",
]

[tool.uv.sources]
libero = { workspace = true }
openpi = { git = "https://github.com/RLinf/openpi", branch = "main" }

[tool.uv.workspace]
members = ["external/*"]
